# mypy

./: .gitignore  pyproject.toml
src/mypy/: main.ipynb  plotters.py
