[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mypy"
version = "0.1.1"
authors = [
  { name="Emiliano Manuel Fortes Soplanes", email="emilianomfortes@gmail.com" },
]
description = "My python templates"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/emilianomfortes/mypy"
"Bug Tracker" = "https://github.com/emilianomfortes/mypy/issues"
